@@ -8,8 +8,7 @@ use Number::Format;
 # This test is pretty hard to write
 # you cannot know which locales are installed on a system
 # and how the result should look like for every locale
-# I simply check here whether the number has been transformed
-# in any way.
+# I simply check here whether the number looks right.
 
 my $form = HTML::FormFu->new(
     { tt_args => { INCLUDE_PATH => 'share/templates/tt/xhtml' } } );
@@ -21,5 +20,9 @@ $form->get_field('foo')->default('10002300.123');
 {
     $form->process;
 
-    unlike( $form->render, qr/10002300.123/, 'exact number not there' );
+    like(
+        $form->render,
+        qr/\"10[,.]?002[,.]?300[.,]123[,.]?000[,.]?00\"/,
+        'formatted number is there'
+    );
 }
